# newsfeed

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  report.md
.github/workflows/: ci.yml
newsfeed/: app.py  classification.py  config.py  dependencies.py  embedding.py  fetchers.py  logger.py  models.py  scheduler.py  storage.py
newsfeed/services/: news_service.py
newsfeed/storage/: __init__.py
newsfeed/storage/article/: base.py  sql.py
newsfeed/storage/semantic/: base.py  chroma.py
tests/: test_api.py  test_classification_integration.py  test_fetchers.py  test_fetchers_integration.py  test_news_service.py  test_news_service_integration.py  test_scheduler.py  test_storage.py
tests/fixtures/: reddit_rss.xml  sample_rss.xml
