[project]
name = "newsfeed"
version = "0.1.0"
description = "A real-time newsfeed system that aggregates IT-related news items from selected public sources, classify those into a list of categories and create an API to allow LLM applications to search and retrieve those documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
